initial commit for cynthia protfolio page

--- a/Cynthia_Portfolio.HTML
+++ b/Cynthia_Portfolio.HTML
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="Cynthia_Portfolio.css">
     <title>NerdyMagic</title>
 </head>
 <body>
-    <h1>My name is Cynthia Iloekwe humble known as NerdyMagic in code space world wide web.</h1>
-    <h2>I am an aspiring World Class Software Engineer. Watch this space for my projects</h2>
+    
 </body>
 </html>
