--- a/Cynthia_Portfolio.HTML
+++ b/Cynthia_Portfolio.HTML
@@ -8,6 +8,14 @@
     <title>NerdyMagic</title>
 </head>
 <body>
-    
+    <div>
+        <img src="myimage.jpg" class= "profileimg" alt="image">
+        <div class="site-text">
+            <h1>Hello World! I am NerdyMagic, I turn abstract code in Code Space to useable projects in World Wide Web.</h1>
+            <h3>I am an aspiring World Class Software Engineer. Watch my space for mind blowing projects</h3>
+            <h4>Follow me on my social media to keep up wth my latest project or <a href="#"><strong>subscribe</strong></a> to my newsletter for exciting articles.</h5>
+        
+        </div>
+    </div>
 </body>
 </html>
