--- a/Cynthia_Portfolio.HTML
+++ b/Cynthia_Portfolio.HTML
@@ -14,7 +14,10 @@
             <h1>Hello World! I am NerdyMagic, I turn abstract code in Code Space to useable projects in World Wide Web.</h1>
             <h3>I am an aspiring World Class Software Engineer. Watch my space for mind blowing projects</h3>
             <h4>Follow me on my social media to keep up wth my latest project or <a href="#"><strong>subscribe</strong></a> to my newsletter for exciting articles.</h5>
-        
+                <div id="socialimage"><p><img src="facebook2.png" alt="facebook"><img src="twitter1.png" alt="facebook"><img src="linkedin.png" alt="facebook">
+                    <a href="#" class="formButton">Subscribe</a>
+                    <input type="email" name="email" class="formStyle" placeholder="Email (required)" required />
+                </p></div>
         </div>
     </div>
 </body>
