--- a/portofolio/Cynthia_Portfolio.HTML
+++ b/portofolio/Cynthia_Portfolio.HTML
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="Cynthia_Portfolio.css">
+    <link rel="stylesheet" href="../css/Cynthia_Portfolio.css">
     <title>NerdyMagic</title>
 </head>
 <body>
     <div>
-        <img src="myimage.jpg" class= "profileimg" alt="image">
+        <img src="../image/myimage.jpg" class= "profileimg" alt="image">
         <div class="site-text">
             <h1>Hello World! I am NerdyMagic, I turn abstract code in Code Space to useable projects in World Wide Web.</h1>
             <h3>I am an aspiring World Class Software Engineer. Watch my space for mind blowing projects</h3>
             <h4>Follow me on my social media to keep up wth my latest project or <a href="#"><strong>subscribe</strong></a> to my newsletter for exciting articles.</h5>
-                <div id="socialimage"><p><img src="facebook2.png" alt="facebook"><img src="twitter1.png" alt="facebook"><img src="linkedin.png" alt="facebook">
+                <div id="socialimage"><p><img src="../image/facebook2.png" alt="facebook"><img src="../image/twitter1.png" alt="facebook"><img src="linkedin.png" alt="facebook">
                     <a href="#" class="formButton">Subscribe</a>
                     <input type="email" name="email" class="formStyle" placeholder="Email (required)" required />
                 </p></div>
