Added the navbar to the mark_portfolio page

--- a/portofolio/mark_portfolio.html
+++ b/portofolio/mark_portfolio.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Benjamin Mark</title>
+    <link rel="stylesheet" href="../css/mark_portfolio.css">
 </head>
 <body>
-    
+    <div class="nav-bar">
+        <nav>
+            <div class="logo">PORTFOLIO</div>
+            <ul class="menu-list">
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav>
+    </div>
+
+
+
 </body>
 </html>
