Added the value and interest section

--- a/portofolio/mark_portfolio.html
+++ b/portofolio/mark_portfolio.html
@@ -17,6 +17,29 @@
             </ul>
         </nav>
     </div>
+    <div class="interest-section">
+        <div class="grid values">
+            <h3>Values</h3>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
+                It has roots in a piece of classical Latin literature from 45 BC, 
+                making it over 2000 years old.</p>
+        </div>
+        <div class="grid goals">
+            <div class="values">
+                <h3>Goals</h3>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
+                    It has roots in a piece of classical Latin literature from 45 BC, 
+                    making it over 2000 years old.</p>
+            </div>
+        </div>
+        <div class="grid hobby">
+            <h3>Hobbies</h3>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
+                It has roots in a piece of classical Latin literature from 45 BC, 
+                making it over 2000 years old.</p>
+        </div>
+
+    </div>
 
 
 
