--- a/portofolio/emmanuel_portfolio.html
+++ b/portofolio/emmanuel_portfolio.html
@@ -23,20 +23,35 @@
                     </div>
                 </div>
 
+            </div>
+            <div class="further">
                 <div id="name">
-                    <h1>
-                        Hi, I'm Emmanuel
-                    </h1>
+                        <h1>
+                            Hi, I'm Emmanuel
+                        </h1>
                 </div>
                 <div id="des">
                     <h1>
-                       Unlike most Software Developers, I'm also a Software Engineer.
+                        Unlike most Software Developers, I'm also a Software Engineer.
                     </h1>
                 </div>
+
+                <div class="box">
+                        <div class="inner-box a">
+                            <div class="inner-left">
+                                <h1><span>O</span></h1>
+                            </div>
+                            <div class="inner-right"></div>
+                        </div>
+                        <div class="inner-box b"></div>
+                        <div class="inner-box c"></div>
+                    </div>
             </div>
             <div class="clearfix"></div>
             
-            
+           <div class="footer">
+                &copy; Emmanuel Aboderin 2019
+           </div> 
         </div>
     </body>
 </html>
