added header to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>DevRepos</title>
 </head>
 <body>
-    
+    <header>
+        <div class = "container">
+            <h1 class = "header-text">DevRepos</h1>
+        </div>
+    </header>
+    git
 </body>
 </html>
