added template to display developers profile pictures and link to their personal page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
             <h1 class = "header-text">DevRepos</h1>
         </div>
     </header>
-    git
+    <main class = "main">
+            <article>
+                <img src="" alt="NerdyMagic image">
+                <div class = "name">
+                    <a href="./Cynthia_Portfolio.HTML">
+                    <p>NerdyMagic</p>
+                </a>
+                </div>
+            </article>
+    
+        </main>
+        
 </body>
 </html>
