--- a/portofolio/emmanuel_portfolio.html
+++ b/portofolio/emmanuel_portfolio.html
@@ -41,13 +41,14 @@
                             <div class="inner-left">
                                 <h1><span>O</span></h1>
                             </div>
-                            <div class="inner-right"></div>
+                            <div class="inner-right"><i class="fab fa-twitter"></i></div>
                         </div>
+                        <div class="clearfix"></div>
                         <div class="inner-box b"></div>
                         <div class="inner-box c"></div>
                     </div>
             </div>
-            <div class="clearfix"></div>
+            
             
            <div class="footer">
                 &copy; Emmanuel Aboderin 2019
