--- a/portofolio/emmanuel_portfolio.html
+++ b/portofolio/emmanuel_portfolio.html
@@ -44,8 +44,13 @@
                             <div class="inner-right"><i class="fab fa-twitter"></i></div>
                         </div>
                         <div class="clearfix"></div>
-                        <div class="inner-box b"></div>
-                        <div class="inner-box c"></div>
+                        <div class="inner-box b">
+                                <i class="fab fa-google"></i>
+                        </div>
+                        <div class="inner-box c">
+                            <div class="inner-left"><i class="fas fa-mail-bulk"></i></div>
+                            <div class="inner-right"><i class="fas fa-mail-bulk"></i></div>
+                        </div>
                     </div>
             </div>
             
