added the about description row with image

--- a/portofolio/mark_portfolio.html
+++ b/portofolio/mark_portfolio.html
@@ -40,6 +40,31 @@
         </div>
 
     </div>
+    <div class="about-section">
+        <!-- <div class="grid1 my-image">
+                <img src="../image/IMG_20160113_111054.jpg" alt="Avatar" style="width:50%">
+        </div>
+        <div class="grid1 my-about">
+            
+        </div> -->
+        <div class="row">
+            <div class="column my-image" >
+                
+            </div>
+            <div class="column my-about" style="background-color:#bbb;">
+                <div class="about">
+                    <h3>ABOUT ME</h3>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
+                        It has roots in a piece of classical Latin literature from 45 BC, 
+                        making it over 2000 years old.</p>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
+                            It has roots in a piece of classical Latin literature from 45 BC, 
+                            making it over 2000 years old.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 
 
