Added the skill sections

--- a/portofolio/mark_portfolio.html
+++ b/portofolio/mark_portfolio.html
@@ -44,7 +44,7 @@
         <div class="col-container">
             <div class="col my-image">
             </div>
-            <div class="col" style="background:#e8e9e9">
+            <div class="col2 my-about" style="background:#e8e9e9">
                 <div class="about">
                     <h3>ABOUT ME</h3>
                     <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
@@ -75,7 +75,28 @@
                 </div>
             </div>
         </div>
-
+    </div>
+    <div class="skill-section">
+            <div class="col-container">
+                    <div class="col">
+                        <div class="feature">
+                            <h3>MY SKILL</h3>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
+                                It has roots in a piece of classical Latin literature from 45 BC, 
+                                making it over 2000 years old.</p>
+                            <button>CONTACT ME</button>
+                        </div>
+                    </div>
+                    
+                    <div class="col">
+                        <div class="feature">
+                            <h3>Mobile Apps</h3>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
+                                It has roots in a piece of classical Latin literature from 45 BC, 
+                                making it over 2000 years old.</p>
+                        </div>
+                    </div>
+                </div>
     </div>
 
 
