--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             </article>
     
         </main>
-        
+        <footer class = "footer">
+            <div class="container">
+                <p class="site-footer text-center">
+                    copyright 2019 DevRepos Inc. All rights reserved.
+                </p>
+            </div>
+        </footer>
 </body>
 </html>
