styled the skill info column

--- a/portofolio/mark_portfolio.html
+++ b/portofolio/mark_portfolio.html
@@ -79,7 +79,7 @@
     <div class="skill-section">
             <div class="col-container">
                     <div class="col">
-                        <div class="feature">
+                        <div class="skill skill-info">
                             <h3>MY SKILL</h3>
                             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
                                 It has roots in a piece of classical Latin literature from 45 BC, 
@@ -89,7 +89,7 @@
                     </div>
                     
                     <div class="col">
-                        <div class="feature">
+                        <div class="skill skill-graphic">
                             <h3>Mobile Apps</h3>
                             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
                                 It has roots in a piece of classical Latin literature from 45 BC, 
