added header, a home navigation button and linked it to index.html

--- a/portofolio/Cynthia_Portfolio.HTML
+++ b/portofolio/Cynthia_Portfolio.HTML
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <header>
+        <div class = "container">
+        <a href="./DevRepos/index.html"><h1 class="header-text">Home</h1></a>
+        </div>
+    </header>
     <div>
         <img src="../image/myimage1.jpg" class="profileimg" alt="image">
         <div class="site-text">
