--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <article>
                 <img src="" alt="NerdyMagic image">
                 <div class = "name">
-                    <a href="./Cynthia_Portfolio.HTML">
+                    <a href="../DevRepos/portofolio/Cynthia_Portfolio.HTML">
                     <p>NerdyMagic</p>
                 </a>
                 </div>
