--- a/portofolio/emmanuel_portfolio.html
+++ b/portofolio/emmanuel_portfolio.html
@@ -48,8 +48,8 @@
                                 <i class="fab fa-google"></i>
                         </div>
                         <div class="inner-box c">
-                            <div class="inner-left"><i class="fas fa-mail-bulk"></i></div>
-                            <div class="inner-right"><i class="fas fa-mail-bulk"></i></div>
+                            <div class="inner-left"><i class="fab fa-centercode"></i></div>
+                            <div class="inner-right"><i class="fas fa-meteor"></i></div>
                         </div>
                     </div>
             </div>
