--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DevRepos</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
@@ -18,6 +19,14 @@
                 <div class = "name">
                     <a href="../DevRepos/portofolio/Cynthia_Portfolio.HTML">
                     <p>NerdyMagic</p>
+                </a>
+                </div>
+            </article>
+            <article>
+                <img src="" alt="emmanuelaboderin">
+                <div class = "name">
+                    <a href="./portofolio/emmanuel_portfolio.html">
+                    <p>Emmanuel Aboderin</p>
                 </a>
                 </div>
             </article>
