--- a/portofolio/Cynthia_Portfolio.HTML
+++ b/portofolio/Cynthia_Portfolio.HTML
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class = "container">
-        <a href="./DevRepos/index.html"><h1 class="header-text">Home</h1></a>
+        <a href="../index.html"><h1 class="header-text">Home</h1></a>
         </div>
     </header>
     <div>
