home page linking on Emmanuel's portfolio

--- a/portofolio/emmanuel_portfolio.html
+++ b/portofolio/emmanuel_portfolio.html
@@ -10,7 +10,7 @@
             <div class="intro">
                 <div class="nav">
                     <div class="nav-sub left">
-                        <span class="nav-item">Work</span>
+                        <a href="../index.html"><span class="nav-item">Home</span></a> 
                     </div>
                     <div class="nav-sub middle">
                         <div class="logo">
