Added and styled the skill bars

--- a/portofolio/mark_portfolio.html
+++ b/portofolio/mark_portfolio.html
@@ -90,10 +90,42 @@
                     
                     <div class="col">
                         <div class="skill skill-graphic">
-                            <h3>Mobile Apps</h3>
-                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
-                                It has roots in a piece of classical Latin literature from 45 BC, 
-                                making it over 2000 years old.</p>
+                            <div class="col-container">
+                                <div class="col">
+                                    <div class="skill skill-bar-text">
+                                        <dl>
+                                            <dd class="percentage">
+                                                <span class="text">
+                                                JAVASCRIPT
+                                                </span>
+                                            </dd>
+                                            <dd class="percentage">
+                                                <span class="text">
+                                                HTML
+                                                </span>
+                                            </dd>
+                                            <dd class="percentage">
+                                                <span class="text">
+                                                CSS
+                                                </span>
+                                            </dd>
+                                            <dd class="percentage">
+                                                <span class="text">
+                                                ANDROID
+                                                </span>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="skill skill-bar">
+                                        <div class="bar bar-javascript"></div>
+                                        <div class="bar bar-html"></div>
+                                        <div class="bar bar-css"></div>
+                                        <div class="bar bar-andr"></div>
+                                    </div>
+                                </div>
+                                </div>
                         </div>
                     </div>
                 </div>
