added and image to src

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main class = "main">
             <article>
-                <img src="" alt="NerdyMagic image">
+                <img src="./image/myimage1.jpg" alt="NerdyMagic image">
                 <div class = "name">
                     <a href="../DevRepos/portofolio/Cynthia_Portfolio.HTML">
                     <p>NerdyMagic</p>
