--- a/portofolio/mark_portfolio.html
+++ b/portofolio/mark_portfolio.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/mark_portfolio.css">
 </head>
 <body>
+    <div class="container">
     <div class="nav-bar">
         <nav>
             <div class="logo">PORTFOLIO</div>
@@ -131,7 +132,13 @@
                 </div>
     </div>
 
+    <footer>
+        <div class="social-button">
+
+        </div>
+    </footer>
 
 
+</div>
 </body>
 </html>
