--- a/portofolio/mark_portfolio.html
+++ b/portofolio/mark_portfolio.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Benjamin Mark</title>
     <link rel="stylesheet" href="../css/mark_portfolio.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
@@ -133,8 +134,12 @@
     </div>
 
     <footer>
-        <div class="social-button">
-
+        <hr>
+        <div class="social-button"><center>
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-twitter"></i>
+            </center>
         </div>
     </footer>
 
