--- a/portofolio/mark_portfolio.html
+++ b/portofolio/mark_portfolio.html
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                     
-                    <div class="col">
+                    <div class="col2">
                         <div class="skill skill-graphic">
                             <div class="col-container">
                                 <div class="col">
@@ -119,7 +119,7 @@
                                         </dl>
                                     </div>
                                 </div>
-                                <div class="col">
+                                <div class="col2">
                                     <div class="skill skill-bar">
                                         <div class="bar bar-javascript"></div>
                                         <div class="bar bar-html"></div>
