hover on buttons

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <footer class = "footer">
                 <div class="container">
                     <p class="site-footer text-center">
-                        copyright 2019 DevRepos Inc. All rights reserved.
+                        &copy; Copyright 2019 DevRepos Inc. All rights reserved.
                     </p>
                 </div>
             </footer>
