Added link to the home page mark profile

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
                     </a>
                     </div>
                 </article>
+                <article>
+                        <img src="./image/IMG_20160113_111054.jpg" alt="BenMark image">
+                        <div class = "name">
+                            <a href="./portofolio/mark_portfolio.html">
+                            <p><span>Benjamin Mark</span></p>
+                        </a>
+                        </div>
+                </article>
         
             </main>
             <footer class = "footer">
