styled mark portofolio page logo

--- a/portofolio/mark_portfolio.html
+++ b/portofolio/mark_portfolio.html
@@ -12,7 +12,7 @@
     <div class="container">
     <div class="nav-bar">
         <nav>
-            <div class="logo">PORTFOLIO</div>
+            <div class="logo"><span class="logo-letter">P</span>ORTFOLIO</div>
             <ul class="menu-list">
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="#">CONTACT</a></li>
