--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
             <header>
             <div class = "container">
-                <h1 class = "header-text">&lt;DevRepos/&gt;</h1>
+                <h1 class = "header-text">&lt;DevRez/&gt;</h1>
             </div>
         </header>
         <main class = "main">
