another conflict created

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
             <header>
             <div class = "container"
-            <h1 class = "header-text">&lt;DevReps/&gt;</h1>
+            <h1 class = "header-text">&lt;DevRepos/&gt;</h1>
             </div>
         </header>
         <main class = "main">
@@ -26,7 +26,7 @@
                     <img src="./image/myimage1.jpg" alt="NerdyMagic image">
                     <div class = "name">
                         <a href="../DevRepos/portofolio/Cynthia_Portfolio.HTML">
-                        <p><span>NerdyMagic</span></p>
+                        <p><span>Nerdy_Magic</span></p>
                     </a>
                     </div>
                 </article>
