--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
     <div class="wrapper">
             <header>
-            <div class = "container"
-
+            <div class = "container">
             <h1 class = "header-text">&lt;DevRepos/&gt;</h1>
             </div>
         </header>
@@ -27,9 +26,7 @@
                     <img src="./image/myimage1.jpg" alt="NerdyMagic image">
                     <div class = "name">
                         <a href="../DevRepos/portofolio/Cynthia_Portfolio.HTML">
-
                         <p><span>Nerdy_Magic</span></p>
-
                     </a>
                     </div>
                 </article>
