--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 </head>
 <body>
     <div class="wrapper">
@@ -48,6 +49,7 @@
                 </article>
         
             </main>
+            <div class="clearfix"></div>
             <footer class = "footer">
                 <div class="container">
                     <p class="site-footer text-center">
